@@ -1,5 +1,10 @@
 2007-02-19  Stefan Kost  <ensonic@users.sf.net>
 
+	* src/bmltest_process.c: (test_process):
+	  improve the tests a little (more to come)
+
+2007-02-19  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	  start a list of machines that don't work yet
 
